# remote_monitor

./: .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt  vercel.json
.vercel/: project.json
app/: api.py  config.py  main.py  metrics.py  models.py  parsers.py  ssh_utils.py
app/static/css/: style.css
app/static/js/: script.js
app/templates/: index.html
