[project]
name = "remote-monitor"
version = "0.1.0"
description = "A simple app to monitor remote machines with GPUs via Proxy"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "fastapi>=0.115.12",
    "jinja2>=3.1.6",
    "pyyaml>=6.0.2",
    "sse-starlette>=2.3.3",
    "uvicorn>=0.34.2",
    "asyncssh>=2.14.2",     # Added for SSH connections
    "python-dotenv>=1.0.0", # Added to load .env file for local dev
]
